--- a/wp/wp-content/themes/phila.gov-theme/css/scss/_card.scss
+++ b/wp/wp-content/themes/phila.gov-theme/css/scss/_card.scss
@@ -2,6 +2,10 @@ a.card,
 .card{
   &.program-card{
     border-bottom: none;
+    h3, .h3 {
+      font-size: 1.4rem;
+      margin-top: .5rem;
+    }
   }
   position: relative;
   margin-bottom:0;
