Move program card css to global styles

--- a/wp/wp-content/themes/phila.gov-theme/css/scss/_card.scss
+++ b/wp/wp-content/themes/phila.gov-theme/css/scss/_card.scss
@@ -6,6 +6,9 @@ a.card,
       font-size: 1.4rem;
       margin-top: .5rem;
     }
+    .content-block{
+      min-height:165px;
+    }
   }
   position: relative;
   margin-bottom:0;
