Add spacing in case of div and not p tags

--- a/wp/wp-content/themes/phila.gov-theme/css/scss/_staff-directory.scss
+++ b/wp/wp-content/themes/phila.gov-theme/css/scss/_staff-directory.scss
@@ -59,6 +59,9 @@
     .staff-summary {
       .staff-bio{
         min-height: 200px;
+        div{
+          margin-bottom: 1rem;
+        }
       }
     }
     &:last-of-type {
