Add registration option with associated fields

--- a/wp/wp-content/plugins/phila.gov-customization/admin/css/admin.css
+++ b/wp/wp-content/plugins/phila.gov-customization/admin/css/admin.css
@@ -141,3 +141,6 @@ ul#department_page-search-checklist li{
   line-height: 1.2;
   margin-bottom: 20px;
 }
+.percent-75 .rwmb-select.rwmb-select{
+  width: 75%;
+}
