--- a/wp/wp-content/themes/phila.gov-theme/css/scss/modules/_registration.scss
+++ b/wp/wp-content/themes/phila.gov-theme/css/scss/modules/_registration.scss
@@ -9,7 +9,7 @@
   .closed{
     background: transparentize( color(light-bell), 0.5);
     .fa-inverse{
-      color: #ddf9d8;
+      color: #fef7d0;
     }
   }
   .status{
