Add event spotlight styles

--- a/wp/wp-content/themes/phila.gov-theme/css/scss/base.scss
+++ b/wp/wp-content/themes/phila.gov-theme/css/scss/base.scss
@@ -44,6 +44,7 @@
 
 @import 'beta/containers';
 
+@import 'modules/event-spotlight';
 @import 'modules/hero-half';
 @import 'modules/image-list';
 @import 'modules/registration';
