--- a/wp/wp-content/themes/phila.gov-theme/css/scss/_card.scss
+++ b/wp/wp-content/themes/phila.gov-theme/css/scss/_card.scss
@@ -60,6 +60,9 @@ a.card,
       font-size: rem-calc(16);
     }
   }
+  &.card--calendar{
+    border-bottom:5px solid map-get($post_content_types, calendar);
+  }
   .post-meta{
     position: absolute;
     bottom:1rem;
