Event-specific styles

--- a/wp/wp-content/themes/phila.gov-theme/css/scss/_sticky-nav.scss
+++ b/wp/wp-content/themes/phila.gov-theme/css/scss/_sticky-nav.scss
@@ -95,6 +95,7 @@
       li{
         border-right: none;
         border-bottom: 1px solid color(ghost-gray);
+        width: 100%;
         div{
           display: inline-block;
           padding-top:0;
