--- a/wp/wp-content/themes/phila.gov-theme/css/scss/_sticky-nav.scss
+++ b/wp/wp-content/themes/phila.gov-theme/css/scss/_sticky-nav.scss
@@ -86,6 +86,8 @@
         padding: 0.5rem 0 .8rem 0;
       }
       ul{
+        margin:0;
+        padding:0;
         text-align: left;
       }
       .fa-3x{
