Account for nothing but name and title

--- a/wp/wp-content/themes/phila.gov-theme/css/scss/_accordion.scss
+++ b/wp/wp-content/themes/phila.gov-theme/css/scss/_accordion.scss
@@ -13,3 +13,12 @@
 .accordion-item .accordion-title::before{
   border-left:none;
 }
+
+.accordion-title.disabled{
+  cursor: default;
+  color: color(dark-gray);
+  &::before {
+    content: '';
+
+  }
+}
