Homepage language updates

--- a/wp/wp-content/themes/phila.gov-theme/css/scss/_hero-header.scss
+++ b/wp/wp-content/themes/phila.gov-theme/css/scss/_hero-header.scss
@@ -58,7 +58,7 @@
 
 // v2 hero homepage
 .home {
-  .beta-message {
+  .welcome-message {
     p {
         font-weight: 400;
         font-size: 1.15rem;
