Remove wip header, clean up process bar

--- a/wp/wp-content/themes/phila.gov-theme/css/scss/base.scss
+++ b/wp/wp-content/themes/phila.gov-theme/css/scss/base.scss
@@ -40,9 +40,8 @@
 @import 'linked-image-grid';
 @import 'alerts';
 
-@import 'beta/home';
-
-@import 'beta/containers';
+@import 'home';
+@import 'containers';
 
 @import 'modules/hero-half';
 @import 'modules/image-list';
