--- a/wp/wp-content/themes/phila.gov-theme/css/scss/_home.scss
+++ b/wp/wp-content/themes/phila.gov-theme/css/scss/_home.scss
@@ -237,7 +237,7 @@
         border-left: 15px solid;
         position: absolute;
         margin-top: 0px;
-        left: -1;
+        left: -1px;
       }
       &.left-arrow-white {
         &:before {
