Correct time display, clean up rendering

--- a/wp/wp-content/themes/phila.gov-theme/css/scss/modules/_event-spotlight.scss
+++ b/wp/wp-content/themes/phila.gov-theme/css/scss/modules/_event-spotlight.scss
@@ -26,6 +26,11 @@
     border-bottom: 5px solid color(phanatic-green);
   }
 }
-.feature-detail{
+
+.feature-description{
   min-height: 100px;
+}
+
+.feature-detail{
+  min-height: 200px;
 }
