Finalize common resources

--- a/wp/wp-content/themes/phila.gov-theme/css/scss/_card.scss
+++ b/wp/wp-content/themes/phila.gov-theme/css/scss/_card.scss
@@ -67,6 +67,12 @@ a.card,
     position: absolute;
     bottom:1rem;
   }
+  .card-description{
+    font-weight: normal;
+    p{
+      color: color(dark-gray);
+    }
+  }
 }
 .feature-main{
   article, a.card{
