Remove mayor's name, add 4th resource

--- a/wp/wp-content/themes/phila.gov-theme/css/scss/_card.scss
+++ b/wp/wp-content/themes/phila.gov-theme/css/scss/_card.scss
@@ -73,6 +73,9 @@ a.card,
       color: color(dark-gray);
     }
   }
+  &.card-fixed-height{
+    min-height: 120px;
+  }
 }
 .feature-main{
   article, a.card{
