Hide parent box

--- a/wp/wp-content/plugins/phila.gov-customization/admin/css/admin.css
+++ b/wp/wp-content/plugins/phila.gov-customization/admin/css/admin.css
@@ -155,3 +155,8 @@ ul#department_page-search-checklist li{
 .percent-75 .rwmb-select.rwmb-select{
   width: 75%;
 }
+
+#newpost_tag_parent,
+#addtag .form-field.term-parent-wrap {
+  display: none;
+}
