Department authors can't use tags

--- a/wp/wp-content/plugins/phila.gov-customization/admin/css/admin-department-author.css
+++ b/wp/wp-content/plugins/phila.gov-customization/admin/css/admin-department-author.css
@@ -10,6 +10,7 @@ a[href$="nav-menus.php?action=locations"],
 #news_type-adder,
 /* no tag creation  */
 #tagsdiv-post_tag,
+#post_tagdiv,
 /* no per-page role editor */
 #wpfront-user-role-editor-role-permission,
 /* hide media buttons */
