--- a/wp/wp-content/themes/phila.gov-theme/css/scss/_table.scss
+++ b/wp/wp-content/themes/phila.gov-theme/css/scss/_table.scss
@@ -88,7 +88,7 @@ table.theme-light{
 }
 
 .archive-results{
-  @include breakpoint(medium up) {
+  @include breakpoint(large up) {
     .title{
       width:500px;
     }
