--- a/wp/wp-content/themes/phila.gov-theme/css/scss/base.scss
+++ b/wp/wp-content/themes/phila.gov-theme/css/scss/base.scss
@@ -36,6 +36,7 @@
 @import 'table';
 @import 'things-to-do';
 @import 'our-locations';
+@import 'pagination';
 @import 'linked-image-grid';
 @import 'alerts';
 
