--- a/wp/wp-content/themes/phila.gov-theme/css/scss/_panel.scss
+++ b/wp/wp-content/themes/phila.gov-theme/css/scss/_panel.scss
@@ -1,7 +1,7 @@
 .info-block{
   font-size:1.5rem;
   font-style: italic;
-  p.paragraph{
+  .paragraph{
     font-size: 1rem;
     font-style: normal;
   }
