Hide on page load until template is selected

--- a/wp/wp-content/plugins/phila.gov-customization/admin/css/admin.css
+++ b/wp/wp-content/plugins/phila.gov-customization/admin/css/admin.css
@@ -70,6 +70,10 @@ th[class*="column-taxonomy"], .fixed .column-tags{
   display: none !important;
 }
 
+.hide-on-load {
+  display: none;
+}
+
 .rwmb-button.remove-clone:hover {
   background: #C00;
 }
