--- a/wp/wp-content/themes/phila.gov-theme/css/scss/_layout.scss
+++ b/wp/wp-content/themes/phila.gov-theme/css/scss/_layout.scss
@@ -162,5 +162,12 @@ footer.site-footer{
 }
 
 hr {
-  margin: 1.42857rem 0.71429rem;
+  margin-top: 1.42857rem;
+  margin-bottom: 1.42857rem;
+  margin-left: 0.71429rem;
+  margin-right: 0.71429rem
+}
+.margin-auto{
+  margin-left:auto;
+  margin-right:auto;
 }
