--- a/wp/wp-content/themes/phila.gov-theme/css/scss/_resource-list.scss
+++ b/wp/wp-content/themes/phila.gov-theme/css/scss/_resource-list.scss
@@ -12,10 +12,13 @@
   }
   ul {
       list-style: none;
-      margin-left: 0;
+      margin: 0;
       padding-left: 0;
       display: block;
     li {
+      &:first-child{
+        margin-top:0;
+      }
       background-color: color(ghost-gray);
       margin: .75rem 0rem;
       a {
