Add association title and styles

--- a/wp/wp-content/themes/phila.gov-theme/css/scss/pages/_programs-initiatives.scss
+++ b/wp/wp-content/themes/phila.gov-theme/css/scss/pages/_programs-initiatives.scss
@@ -57,9 +57,20 @@
     }
   }
 }
+
 .hero-subpage{
   background-repeat: no-repeat;
   background-size: cover;
+
+  &.associated-sub {
+    h1 {
+      font-size: 3.5rem;
+    }
+    hr{
+      width: 40%;
+      margin: 0 auto;
+    }
+  }
 }
 
 .program #site-nav {
