Location list rendering

--- a/wp/wp-content/themes/phila.gov-theme/css/scss/base.scss
+++ b/wp/wp-content/themes/phila.gov-theme/css/scss/base.scss
@@ -19,6 +19,7 @@
 @import 'jotform';
 @import 'label';
 @import 'lightbox';
+@import 'location-list';
 @import 'panel';
 @import 'resource-list';
 @import 'search';
