Modify spacing + bg color

--- a/wp/wp-content/themes/phila.gov-theme/css/scss/_location-list.scss
+++ b/wp/wp-content/themes/phila.gov-theme/css/scss/_location-list.scss
@@ -8,6 +8,6 @@
       display: block;
       padding: 1rem 1rem 1rem 2rem;
       margin-bottom: .5rem;
-      background: color(light-blue);
-   }
+      background: rgba(218, 237, 254, .6);
+  }
 }
