--- a/wp/wp-content/themes/phila.gov-theme/css/scss/_location-list.scss
+++ b/wp/wp-content/themes/phila.gov-theme/css/scss/_location-list.scss
@@ -6,7 +6,7 @@
       page-break-inside: avoid;
       break-inside: avoid;
       display: block;
-      padding: 1rem 1rem 1rem 2rem;
+      padding: .5rem 1rem .5rem 2rem;
       margin-bottom: .5rem;
       background: rgba(218, 237, 254, .6);
   }
