--- a/wp/wp-content/themes/phila.gov-theme/css/scss/_a-z-list.scss
+++ b/wp/wp-content/themes/phila.gov-theme/css/scss/_a-z-list.scss
@@ -26,20 +26,6 @@
       border-top:none;
     }
   }
-  .row{
-    border-top: 1px solid color(dark-gray);
-    margin-bottom:2rem;
-
-    .letter{
-      font-size: $large-font-base / 1.75;
-      line-height: 1;
-
-      @media screen and (min-width: 40em) {
-        line-height: inherit;
-      }
-
-    }
-  }
 
   a[disabled] {
     pointer-events: none;
@@ -55,6 +41,19 @@
     border: 0;
   }
 
+}
+
+#a-z-filter-list{
+  hr::after{
+    content: attr(data-alphabet);
+    display: inline-block;
+    margin-top: 2rem;
+    font-size: $large-font-base / 1.75;
+    line-height: 1;
+    text-transform: uppercase;
+    font-family: 'Montserrat', 'Tahoma', sans-serif;
+    font-weight: 400;
+  }
 }
 
 .directory{
