Select all versions of font-awesome

--- a/wp/wp-content/themes/phila.gov-theme/css/scss/_layout.scss
+++ b/wp/wp-content/themes/phila.gov-theme/css/scss/_layout.scss
@@ -106,7 +106,7 @@ table.connect{
     a div {
       display: block;
       text-align: center;
-      .fa {
+      .fa, .fab, .fal, .far, .fas {
         margin:0;
         font-size: 4rem;
       }
