--- a/wp/wp-content/themes/phila.gov-theme/css/scss/_service-updates.scss
+++ b/wp/wp-content/themes/phila.gov-theme/css/scss/_service-updates.scss
@@ -33,7 +33,7 @@
     color:#fff;
     font-size: 3rem;
 
-    .fa{
+    .fa, .fab, .fal, .far, .fas{
       display: inline-block;
       vertical-align: middle;
     }
