--- a/wp/wp-content/themes/phila.gov-theme/css/scss/_sticky-nav.scss
+++ b/wp/wp-content/themes/phila.gov-theme/css/scss/_sticky-nav.scss
@@ -23,7 +23,7 @@
       li{
         border-right:none;
 
-        .fa{
+        .fa, .fab, .fal, .far, .fas{
           visibility: hidden;
         }
 
