--- a/wp/wp-content/themes/phila.gov-theme/css/scss/pages/_departments.scss
+++ b/wp/wp-content/themes/phila.gov-theme/css/scss/pages/_departments.scss
@@ -10,7 +10,7 @@
   table.no-alternate tr{
     background: white;
   }
-  .fa{
+  .fa, .fab, .fal, .far, .fas{
     font-size:1.5rem;
   }
   .list-heading{
