--- a/wp/wp-content/themes/phila.gov-theme/css/scss/_sticky-nav.scss
+++ b/wp/wp-content/themes/phila.gov-theme/css/scss/_sticky-nav.scss
@@ -76,7 +76,7 @@
       }
     }
     li div {
-      padding:.5rem 0 .3rem 0;
+      padding: 1rem 0 .3rem 0;
 
     }
     @include breakpoint(small only) {
