--- a/wp/wp-content/themes/phila.gov-theme/css/scss/_custom-text.scss
+++ b/wp/wp-content/themes/phila.gov-theme/css/scss/_custom-text.scss
@@ -1,9 +1,11 @@
 .custom-text-multi {
   @media only screen and (min-width: 40em) {
-    .columns {
-      border-right: 2px solid color(ghost-gray);
+    .columns, .cell {
+      border-right: 1px solid color(dark-gray);
+      padding: 0 0 0 3rem;
       &:last-of-type {
         border-right: 0;
+        padding: 0;
       }
     }
   }
