--- a/wp/wp-content/themes/phila.gov-theme/css/scss/_custom-text.scss
+++ b/wp/wp-content/themes/phila.gov-theme/css/scss/_custom-text.scss
@@ -5,6 +5,8 @@
       padding: 0 0 0 3rem;
       &:last-of-type {
         border-right: 0;
+      }
+      &:first-of-type {
         padding: 0;
       }
     }
