Prevent submit box from being hidden

--- a/wp/wp-content/plugins/phila.gov-customization/admin/css/admin.css
+++ b/wp/wp-content/plugins/phila.gov-customization/admin/css/admin.css
@@ -1,5 +1,8 @@
 /* for all users */
 
+.postbox{
+  display: block !important;
+}
 .full-width,
 input[type="url"],
 .full-width > .rwmb-input > .rwmb-text
