--- a/wp/wp-content/plugins/phila.gov-customization/admin/css/admin.css
+++ b/wp/wp-content/plugins/phila.gov-customization/admin/css/admin.css
@@ -1,6 +1,6 @@
 /* for all users */
-
-.postbox{
+/* Recent metabox update is hidding submit div for some pages */
+#submitdiv{
   display: block !important;
 }
 .full-width,
