Add global map legend

--- a/wp/wp-content/themes/phila.gov-theme/css/scss/base.scss
+++ b/wp/wp-content/themes/phila.gov-theme/css/scss/base.scss
@@ -20,6 +20,7 @@
 @import 'label';
 @import 'lightbox';
 @import 'location-list';
+@import 'maps';
 @import 'panel';
 @import 'resource-list';
 @import 'search';
