Force category box to display, something about the latest metabox changes are constantly hiding it

--- a/wp/wp-content/plugins/phila.gov-customization/admin/css/admin-department-author.css
+++ b/wp/wp-content/plugins/phila.gov-customization/admin/css/admin-department-author.css
@@ -1,5 +1,6 @@
 /*can't create create new categories*/
 #category-adder,
+#categorydiv,
 /* can't edit menus */
 a[href^="nav-menus.php"],
 a[href$="nav-menus.php?action=locations"],
