--- a/wp/wp-content/plugins/phila.gov-customization/admin/css/admin.css
+++ b/wp/wp-content/plugins/phila.gov-customization/admin/css/admin.css
@@ -1,6 +1,7 @@
 /* for all users */
 /* Recent metabox update is hidding submit div for some pages */
-#submitdiv{
+#submitdiv,
+#categorydiv{
   display: block !important;
 }
 .full-width,
