--- a/wp/wp-content/plugins/phila.gov-customization/admin/css/read-only-user.css
+++ b/wp/wp-content/plugins/phila.gov-customization/admin/css/read-only-user.css
@@ -1,9 +1,10 @@
 /* Modify admin for users that can't make any changes */
 #submitdiv,
+#categorydiv,
 .edit,
 .trash,
 .inline.hide-if-no-js,
 .media-toolbar,
 .page-title-action{
-  display: none;
+  display: none !important;
 }
