Only sub-topic cards

--- a/wp/wp-content/themes/phila.gov-theme/css/scss/_card.scss
+++ b/wp/wp-content/themes/phila.gov-theme/css/scss/_card.scss
@@ -143,6 +143,6 @@ a.card.card--last,
   }
 }
 //TODO: Add to standards. It's currently only on medium and up breakpoints but should be for all.
-a.card.sub-topic, a.card.card--overview {
+a.card.sub-topic{
   margin-bottom: 4rem;
 }
