Correct selector to prevent dropdown from always being open

--- a/wp/wp-content/themes/phila.gov-theme/css/scss/pages/_programs-initiatives.scss
+++ b/wp/wp-content/themes/phila.gov-theme/css/scss/pages/_programs-initiatives.scss
@@ -79,7 +79,7 @@
     margin-bottom:0;
     margin-top:-15px;
     text-align: center;
-    .menu{
+    .secondary-menu{
       display: inline-block;
     }
     .secondary-menu {
