--- a/wp/wp-content/themes/phila.gov-theme/css/scss/_pagination.scss
+++ b/wp/wp-content/themes/phila.gov-theme/css/scss/_pagination.scss
@@ -1,24 +1,29 @@
-ul.paginate-links {
+ul.paginate-links{
   display: inline-block;
   margin:0;
   padding:0;
   float:right;
+
+  li{
+    display: inline-block;
+    border-right: 2px solid white;
+    margin-bottom:1rem;
+  }
+  a{
+    display: block;
+    padding: .5rem;
+    background: #0f4d90;
+    color:white;
+  }
+  a{
+    color:white;
+  }
+  li.active a{
+    background: white;
+    color: #444;
+  }
 }
-.paginate-links li{
-  display: inline-block;
-  border-right: 2px solid white;
-  margin-bottom:1rem;
-}
-.paginate-links a{
-  display: block;
-  padding: .5rem;
-  background: #0f4d90;
-  color:white;
-}
-.paginate-links a{
-  color:white;
-}
-.paginate-links li.active a{
-  background: white;
-  color: #444;
+
+.no-results {
+  display: none;
 }
