Update service category name, prep tablet menu

--- a/wp/wp-content/themes/phila.gov-theme/css/scss/base/_global-nav.scss
+++ b/wp/wp-content/themes/phila.gov-theme/css/scss/base/_global-nav.scss
@@ -384,12 +384,14 @@
         padding: 1.5rem;
         background-color: color(ghost-gray);
         width: 100%;
+        text-indent: -2.5em;
 
         &:hover {
           color:white;
           background: color(dark-ben-franklin);
         }
         span{
+          padding-left: 4rem;
           display:block;
         }
       }
