Make it work in IE

--- a/wp/wp-content/themes/phila.gov-theme/css/scss/base/_global-nav.scss
+++ b/wp/wp-content/themes/phila.gov-theme/css/scss/base/_global-nav.scss
@@ -384,15 +384,20 @@
         padding: 1.5rem;
         background-color: color(ghost-gray);
         width: 100%;
-        text-indent: -2.5em;
-
+        
         &:hover {
           color:white;
           background: color(dark-ben-franklin);
         }
+        span.label {
+          max-width: 250px;
+          float:left;
+        }
         span{
-          padding-left: 4rem;
           display:block;
+          i {
+            float:left;
+          }
         }
       }
     }
