Actually make it work in IE, thanks @ibdf

--- a/wp/wp-content/themes/phila.gov-theme/css/scss/base/_global-nav.scss
+++ b/wp/wp-content/themes/phila.gov-theme/css/scss/base/_global-nav.scss
@@ -384,19 +384,24 @@
         padding: 1.5rem;
         background-color: color(ghost-gray);
         width: 100%;
-        
+
         &:hover {
           color:white;
           background: color(dark-ben-franklin);
         }
-        span.label {
-          max-width: 250px;
-          float:left;
+        .text-label {
+          display: inline-block;
+          width: 100%;
+          line-height: 1.2;
+          vertical-align: middle;
+          max-width: calc(100% - 45px);
         }
         span{
           display:block;
           i {
-            float:left;
+            display: inline-block;
+            vertical-align: middle;
+            padding-right: 0.8rem;
           }
         }
       }
