Add cost and payment info to service page

--- a/wp/wp-content/themes/phila.gov-theme/css/scss/_expandable.scss
+++ b/wp/wp-content/themes/phila.gov-theme/css/scss/_expandable.scss
@@ -21,3 +21,14 @@
     background-image: linear-gradient(rgba(255, 255, 255, 0), #e0efff);
   }
 }
+
+.panel.info{
+  padding:0;
+}
+
+.panel.info .medium-text{
+  font-size: 4rem;
+}
+.secondary-font{
+  font-family: "Montserrat", sans-serif;
+}
