Override standards panel sizes

--- a/wp/wp-content/themes/phila.gov-theme/css/scss/_panel.scss
+++ b/wp/wp-content/themes/phila.gov-theme/css/scss/_panel.scss
@@ -14,3 +14,11 @@
     margin-bottom:2rem;
   }
 }
+
+.panel.info .title{
+  text-transform: none;
+}
+
+.panel.info .large-text{
+  font-size: 5rem;
+}
