Add program tile shortcode option

--- a/wp/wp-content/themes/phila.gov-theme/css/scss/_card.scss
+++ b/wp/wp-content/themes/phila.gov-theme/css/scss/_card.scss
@@ -10,6 +10,21 @@ a.card,
       min-height:165px;
     }
     &.vertical {
+      &.small{
+        h3, .h3{
+          margin:0;
+        }
+        .content-block{
+          min-height: auto;
+          vertical-align: middle;
+        }
+        @include breakpoint(medium up) {
+          img {
+            height: 100px;
+            width: auto;
+          }
+        }
+      }
       @include breakpoint(medium up) {
         img {
           height: 184px;
