--- a/wp/wp-content/themes/phila.gov-theme/css/scss/_layout.scss
+++ b/wp/wp-content/themes/phila.gov-theme/css/scss/_layout.scss
@@ -157,3 +157,9 @@ caption {
   padding: 0 0 1rem;
   text-align: left;
 }
+
+.phila-placeholder {
+  margin: 1rem;
+  padding: 1rem;
+  background: color(flyers-orange)
+}
