Create partial for new full-width header

--- a/wp/wp-content/themes/phila.gov-theme/css/scss/base.scss
+++ b/wp/wp-content/themes/phila.gov-theme/css/scss/base.scss
@@ -32,6 +32,7 @@
 @import 'pagination';
 @import 'alerts';
 
+@import 'modules/hero-full';
 @import 'modules/hero-header';
 @import 'modules/hero-half';
 @import 'modules/image-list';
