Begin rendering homepage details

--- a/wp/wp-content/themes/phila.gov-theme/css/scss/base.scss
+++ b/wp/wp-content/themes/phila.gov-theme/css/scss/base.scss
@@ -43,6 +43,7 @@
 @import 'pages/departments';
 @import 'pages/documents';
 @import 'pages/event-spotlight';
+@import 'pages/guides';
 @import 'pages/home';
 @import 'pages/post';
 @import 'pages/programs-initiatives';
